// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa_virtual_people;

option java_package = "org.wfanet.virtualpeople.common";
option java_multiple_files = true;

// Represents geographic data, e.g. country/region/city.
// The meaning of these ids are specific to each event data provider.
// The ids used in model training must be consistent with the ids used in
// labeling.
message GeoLocation {
  optional uint32 country_id = 1;

  optional uint32 region_id = 2;

  optional uint32 city_id = 3;
}
